# mimir

./: .gitignore  Cargo.toml  LICENSE  compose.yaml
.claude/: settings.json
.devcontainer/: devcontainer.json
config/: .p10k.zsh  .zshrc
crates/: Dockerfile
crates/channel/: Cargo.toml
crates/channel/src/: freespace.rs  inf.rs  lib.rs  local5g.rs  shadowing.rs
crates/core/: Cargo.toml
crates/core/src/: data.rs  geometry.rs  lib.rs  power.rs  time.rs
crates/engine/: Cargo.toml
crates/engine/src/: builder.rs  cell_store.rs  clock.rs  event_loop.rs  handle.rs  lib.rs  radio_map.rs  ue_store.rs
crates/l2s/: Cargo.toml
crates/l2s/src/: lib.rs
crates/nr-core/: Cargo.toml
crates/nr-core/src/: angle.rs  config.rs  data.rs  direction.rs  frequency.rs  geometry.rs  ids.rs  power.rs  rng.rs  time.rs
crates/nr-spec/: Cargo.toml
crates/nr-spec/src/: frame.rs  lib.rs  mcs.rs  numerology.rs  tbs.rs
crates/phy/: Cargo.toml
crates/phy/src/: common.rs  lib.rs  link.rs  link_level.rs  sys.rs  sys_level.rs
crates/phy/src/common/: mcs_util.rs  sinr.rs
crates/phy/src/sys_level/: bler_lookup.rs  effective_sinr.rs  retx_bler.rs  throughput.rs
crates/runner/: Cargo.toml
crates/runner/src/: mac.rs  main.rs  metrics.rs  mobility.rs  scheduler.rs  traffic.rs
crates/sap/: Cargo.toml
crates/sap/src/: channel.rs  coordinator.rs  lib.rs  mac.rs  messages.rs  mobility.rs  phy.rs  scheduler.rs  traffic.rs
data/l2s/: mcs_mapping.csv
